course-6-practical/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torchserve-service
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8081"
    port: 8081
    targetPort: 8081
  - name: "8082"
    port: 8082
    targetPort: 8082
  - name: "7070"
    port: 7070
    targetPort: 7070
  - name: "7071"
    port: 7071
    targetPort: 7071
  selector:
    app: torchserve
  type: ClusterIP
